--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -1,5 +1,6 @@
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Parkinsans", sans-serif;
     margin: 0;
     padding: 10px;
     background-color: #f9f9f9;
